Fix logo alignment issue

--- a/src/styles/title/_index.scss
+++ b/src/styles/title/_index.scss
@@ -1,6 +1,7 @@
 #title {
   #logo {
-    text-align: center;
+    display: flex;
+    justify-content: center;
     font-family: monospace;
     white-space: pre;
   }
